------------------------------
       Version 5.2.2
------------------------------

  . DrRacket's toolbar buttons now have numbers associated with them
    to control what order they appear in.

------------------------------
       Version 5.2.1
------------------------------

  . The keybindings window is no longer a modal dialog (and its contents
    will change to reflect where the keyboard focus currently is)

  . The initial current-directory for unsaved programs in DrRacket is
    now the user's home directory, instead of whatever the
    current-directory was for the underlying OS process.

  . The current-load-relative-directory is now set to #f initially in
    DrRacket (to better match what Racket does).

  . DrRacket no longer shows a stacktrace for syntax errors in the REPL.

  . The preference that makes a single "(" keystroke insert "()" (and
    similarly for [ { " and |) now only takes effect in Racket mode,
    instead of taking effect in all of the modes, as it used to. This
    change is in service to a bugfix that makes the automatic opening
    parentheses adjustment cooperate with the automatic balancing.

  . The scheme:text-mixin now requires input classes that implement
    the editor:keymap<%> interface.

------------------------------
        Version 5.2
------------------------------

  . changed three menu keybidings:
      "New Tab" is now <menukey>-t
      "Run" is now <menukey>-r
      "Replace" is now <menukey>-shift-f

    The Keyboard Shortcuts section in the manual has a sample
    keybindings file a checkbox that restores the old behavior of
    the first two.

  . Under Windows, DrRacket now saves files, in some situations,
    with LF terminators. Previously, under windows, all files
    were saved with CRLF terminators. Now, a file is saved with
    CRLF terminators when every line in the file ends with CRLF.
    In there is any one line that ends with just LF, then the